# notetake---notepad-with-opengl

./: CMakeLists.txt  main.cpp  vcpkg.json
include/notetake/: editor_metrics.h  editor_state.h  editor_ui.h  glyph_atlas.h  text_renderer.h
src/: editor_metrics.cpp  editor_ui.cpp  glyph_atlas.cpp  text_renderer.cpp
